cmake_minimum_required(VERSION 2.6)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -U_WIN32 -U_WIN64 -DL_ENDIAN -DOPENSSL_SMALL_FOOTPRINT -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE -DOPENSSL_SYS_UEFI=1 ${OPENSSL_FLAGS}")

INCLUDE_DIRECTORIES(${LIBSPDM_DIR}/include
                    ${LIBSPDM_DIR}/include/hal 
                    ${LIBSPDM_DIR}/include/hal/${ARCH}
                    ${LIBSPDM_DIR}/os_stub/include
                    ${LIBSPDM_DIR}/os_stub/openssllib
                    ${LIBSPDM_DIR}/os_stub/openssllib/include
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/include
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/include
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/store
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/x509v3
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/x509
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/ui
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/txt_db
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/stack
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/siphash
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/sha
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/rsa
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/rand
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/poly1305
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/pkcs7
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/pkcs12
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/pem
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/ocsp
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/objects
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/modes
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/md5
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/lhash
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/kdf
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/hmac
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/evp
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/err 
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/dso 
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/ec
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/ec/curve448
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/ec/curve448/arch_32
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/dh
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/conf
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/comp
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/cmac
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/chacha
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/buffer
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/bn
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/bio
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/async
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/async/arch
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/asn1
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/aria
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/aes
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/sm2
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/sm3
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/sm4
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl/ms
                    ${LIBSPDM_DIR}/os_stub/openssllib/openssl
                    
)

SET(src_openssllib
    openssl/crypto/aes/aes_cbc.c
    openssl/crypto/aes/aes_cfb.c
    openssl/crypto/aes/aes_core.c
    openssl/crypto/aes/aes_ecb.c
    openssl/crypto/aes/aes_ige.c
    openssl/crypto/aes/aes_misc.c
    openssl/crypto/aes/aes_ofb.c
    openssl/crypto/aes/aes_wrap.c
    openssl/crypto/aria/aria.c
    openssl/crypto/asn1/a_bitstr.c
    openssl/crypto/asn1/a_d2i_fp.c
    openssl/crypto/asn1/a_digest.c
    openssl/crypto/asn1/a_dup.c
    openssl/crypto/asn1/a_gentm.c
    openssl/crypto/asn1/a_i2d_fp.c
    openssl/crypto/asn1/a_int.c
    openssl/crypto/asn1/a_mbstr.c
    openssl/crypto/asn1/a_object.c
    openssl/crypto/asn1/a_octet.c
    openssl/crypto/asn1/a_print.c
    openssl/crypto/asn1/a_sign.c
    openssl/crypto/asn1/a_strex.c
    openssl/crypto/asn1/a_strnid.c
    openssl/crypto/asn1/a_time.c
    openssl/crypto/asn1/a_type.c
    openssl/crypto/asn1/a_utctm.c
    openssl/crypto/asn1/a_utf8.c
    openssl/crypto/asn1/a_verify.c
    openssl/crypto/asn1/ameth_lib.c
    openssl/crypto/asn1/asn1_err.c
    openssl/crypto/asn1/asn1_gen.c
    openssl/crypto/asn1/asn1_item_list.c
    openssl/crypto/asn1/asn1_lib.c
    openssl/crypto/asn1/asn1_par.c
    openssl/crypto/asn1/asn_mime.c
    openssl/crypto/asn1/asn_moid.c
    openssl/crypto/asn1/asn_mstbl.c
    openssl/crypto/asn1/asn_pack.c
    openssl/crypto/asn1/bio_asn1.c
    openssl/crypto/asn1/bio_ndef.c
    openssl/crypto/asn1/d2i_pr.c
    openssl/crypto/asn1/d2i_pu.c
    openssl/crypto/asn1/evp_asn1.c
    openssl/crypto/asn1/f_int.c
    openssl/crypto/asn1/f_string.c
    openssl/crypto/asn1/i2d_pr.c
    openssl/crypto/asn1/i2d_pu.c
    openssl/crypto/asn1/n_pkey.c
    openssl/crypto/asn1/nsseq.c
    openssl/crypto/asn1/p5_pbe.c
    openssl/crypto/asn1/p5_pbev2.c
    openssl/crypto/asn1/p5_scrypt.c
    openssl/crypto/asn1/p8_pkey.c
    openssl/crypto/asn1/t_bitst.c
    openssl/crypto/asn1/t_pkey.c
    openssl/crypto/asn1/t_spki.c
    openssl/crypto/asn1/tasn_dec.c
    openssl/crypto/asn1/tasn_enc.c
    openssl/crypto/asn1/tasn_fre.c
    openssl/crypto/asn1/tasn_new.c
    openssl/crypto/asn1/tasn_prn.c
    openssl/crypto/asn1/tasn_scn.c
    openssl/crypto/asn1/tasn_typ.c
    openssl/crypto/asn1/tasn_utl.c
    openssl/crypto/asn1/x_algor.c
    openssl/crypto/asn1/x_bignum.c
    openssl/crypto/asn1/x_info.c
    openssl/crypto/asn1/x_int64.c
    openssl/crypto/asn1/x_long.c
    openssl/crypto/asn1/x_pkey.c
    openssl/crypto/asn1/x_sig.c
    openssl/crypto/asn1/x_spki.c
    openssl/crypto/asn1/x_val.c
    openssl/crypto/async/arch/async_null.c
    openssl/crypto/async/arch/async_posix.c
    openssl/crypto/async/arch/async_win.c
    openssl/crypto/async/async.c
    openssl/crypto/async/async_err.c
    openssl/crypto/async/async_wait.c
    openssl/crypto/bio/b_addr.c
    openssl/crypto/bio/b_dump.c
    openssl/crypto/bio/b_sock.c
    openssl/crypto/bio/b_sock2.c
    openssl/crypto/bio/bf_buff.c
    openssl/crypto/bio/bf_lbuf.c
    openssl/crypto/bio/bf_nbio.c
    openssl/crypto/bio/bf_null.c
    openssl/crypto/bio/bio_cb.c
    openssl/crypto/bio/bio_err.c
    openssl/crypto/bio/bio_lib.c
    openssl/crypto/bio/bio_meth.c
    openssl/crypto/bio/bss_acpt.c
    openssl/crypto/bio/bss_bio.c
    openssl/crypto/bio/bss_conn.c
    openssl/crypto/bio/bss_dgram.c
    openssl/crypto/bio/bss_fd.c
    openssl/crypto/bio/bss_file.c
    openssl/crypto/bio/bss_log.c
    openssl/crypto/bio/bss_mem.c
    openssl/crypto/bio/bss_null.c
    openssl/crypto/bio/bss_sock.c
    openssl/crypto/bn/bn_add.c
    openssl/crypto/bn/bn_asm.c
    openssl/crypto/bn/bn_blind.c
    openssl/crypto/bn/bn_const.c
    openssl/crypto/bn/bn_ctx.c
    openssl/crypto/bn/bn_depr.c
    openssl/crypto/bn/bn_dh.c
    openssl/crypto/bn/bn_div.c
    openssl/crypto/bn/bn_err.c
    openssl/crypto/bn/bn_exp.c
    openssl/crypto/bn/bn_exp2.c
    openssl/crypto/bn/bn_gcd.c
    openssl/crypto/bn/bn_gf2m.c
    openssl/crypto/bn/bn_intern.c
    openssl/crypto/bn/bn_kron.c
    openssl/crypto/bn/bn_lib.c
    openssl/crypto/bn/bn_mod.c
    openssl/crypto/bn/bn_mont.c
    openssl/crypto/bn/bn_mpi.c
    openssl/crypto/bn/bn_mul.c
    openssl/crypto/bn/bn_nist.c
    openssl/crypto/bn/bn_prime.c
    openssl/crypto/bn/bn_print.c
    openssl/crypto/bn/bn_rand.c
    openssl/crypto/bn/bn_recp.c
    openssl/crypto/bn/bn_shift.c
    openssl/crypto/bn/bn_sqr.c
    openssl/crypto/bn/bn_sqrt.c
    openssl/crypto/bn/bn_srp.c
    openssl/crypto/bn/bn_word.c
    openssl/crypto/bn/bn_x931p.c
    openssl/crypto/buffer/buf_err.c
    openssl/crypto/buffer/buffer.c
    openssl/crypto/chacha/chacha_enc.c
    openssl/crypto/cmac/cm_ameth.c
    openssl/crypto/cmac/cm_pmeth.c
    openssl/crypto/cmac/cmac.c
    openssl/crypto/comp/c_zlib.c
    openssl/crypto/comp/comp_err.c
    openssl/crypto/comp/comp_lib.c
    openssl/crypto/conf/conf_api.c
    openssl/crypto/conf/conf_def.c
    openssl/crypto/conf/conf_err.c
    openssl/crypto/conf/conf_lib.c
    openssl/crypto/conf/conf_mall.c
    openssl/crypto/conf/conf_mod.c
    openssl/crypto/conf/conf_sap.c
    openssl/crypto/conf/conf_ssl.c
    openssl/crypto/cpt_err.c
    openssl/crypto/cryptlib.c
    openssl/crypto/ctype.c
    openssl/crypto/cversion.c
    openssl/crypto/dh/dh_ameth.c
    openssl/crypto/dh/dh_asn1.c
    openssl/crypto/dh/dh_check.c
    openssl/crypto/dh/dh_depr.c
    openssl/crypto/dh/dh_err.c
    openssl/crypto/dh/dh_gen.c
    openssl/crypto/dh/dh_kdf.c
    openssl/crypto/dh/dh_key.c
    openssl/crypto/dh/dh_lib.c
    openssl/crypto/dh/dh_meth.c
    openssl/crypto/dh/dh_pmeth.c
    openssl/crypto/dh/dh_prn.c
    openssl/crypto/dh/dh_rfc5114.c
    openssl/crypto/dh/dh_rfc7919.c
    openssl/crypto/dso/dso_dl.c
    openssl/crypto/dso/dso_dlfcn.c
    openssl/crypto/dso/dso_err.c
    openssl/crypto/dso/dso_lib.c
    openssl/crypto/dso/dso_openssl.c
    openssl/crypto/dso/dso_vms.c
    openssl/crypto/dso/dso_win32.c
    openssl/crypto/ebcdic.c
    openssl/crypto/ec/curve25519.c
    openssl/crypto/ec/curve448/arch_32/f_impl.c
    openssl/crypto/ec/curve448/curve448.c
    openssl/crypto/ec/curve448/curve448_tables.c
    openssl/crypto/ec/curve448/eddsa.c
    openssl/crypto/ec/curve448/f_generic.c
    openssl/crypto/ec/curve448/scalar.c
    openssl/crypto/ec/ec2_oct.c
    openssl/crypto/ec/ec2_smpl.c
    openssl/crypto/ec/ec_ameth.c
    openssl/crypto/ec/ec_asn1.c
    openssl/crypto/ec/ec_check.c
    openssl/crypto/ec/ec_curve.c
    openssl/crypto/ec/ec_cvt.c
    openssl/crypto/ec/ec_err.c
    openssl/crypto/ec/ec_key.c
    openssl/crypto/ec/ec_kmeth.c
    openssl/crypto/ec/ec_lib.c
    openssl/crypto/ec/ec_mult.c
    openssl/crypto/ec/ec_oct.c
    openssl/crypto/ec/ec_pmeth.c
    openssl/crypto/ec/ec_print.c
    openssl/crypto/ec/ecdh_kdf.c
    openssl/crypto/ec/ecdh_ossl.c
    openssl/crypto/ec/ecdsa_ossl.c
    openssl/crypto/ec/ecdsa_sign.c
    openssl/crypto/ec/ecdsa_vrf.c
    openssl/crypto/ec/eck_prn.c
    openssl/crypto/ec/ecp_mont.c
    openssl/crypto/ec/ecp_nist.c
    openssl/crypto/ec/ecp_nistp224.c
    openssl/crypto/ec/ecp_nistp256.c
    openssl/crypto/ec/ecp_nistp521.c
    openssl/crypto/ec/ecp_nistputil.c
    openssl/crypto/ec/ecp_oct.c
    openssl/crypto/ec/ecp_smpl.c
    openssl/crypto/ec/ecx_meth.c
    openssl/crypto/err/err.c
    openssl/crypto/err/err_prn.c
    openssl/crypto/evp/bio_b64.c
    openssl/crypto/evp/bio_enc.c
    openssl/crypto/evp/bio_md.c
    openssl/crypto/evp/bio_ok.c
    openssl/crypto/evp/c_allc.c
    openssl/crypto/evp/c_alld.c
    openssl/crypto/evp/cmeth_lib.c
    openssl/crypto/evp/digest.c
    openssl/crypto/evp/e_aes.c
    openssl/crypto/evp/e_aes_cbc_hmac_sha256.c
    openssl/crypto/evp/e_aria.c
    openssl/crypto/evp/e_bf.c
    openssl/crypto/evp/e_camellia.c
    openssl/crypto/evp/e_cast.c
    openssl/crypto/evp/e_chacha20_poly1305.c
    openssl/crypto/evp/e_null.c
    openssl/crypto/evp/e_old.c
    openssl/crypto/evp/e_seed.c
    openssl/crypto/evp/e_xcbc_d.c
    openssl/crypto/evp/encode.c
    openssl/crypto/evp/evp_cnf.c
    openssl/crypto/evp/evp_enc.c
    openssl/crypto/evp/evp_err.c
    openssl/crypto/evp/evp_key.c
    openssl/crypto/evp/evp_lib.c
    openssl/crypto/evp/evp_pbe.c
    openssl/crypto/evp/evp_pkey.c
    openssl/crypto/evp/m_md5.c
    openssl/crypto/evp/m_mdc2.c
    openssl/crypto/evp/m_null.c
    openssl/crypto/evp/m_ripemd.c
    openssl/crypto/evp/m_sha1.c
    openssl/crypto/evp/m_sha3.c
    openssl/crypto/evp/m_sigver.c
    openssl/crypto/evp/m_wp.c
    openssl/crypto/evp/names.c
    openssl/crypto/evp/p5_crpt.c
    openssl/crypto/evp/p5_crpt2.c
    openssl/crypto/evp/p_dec.c
    openssl/crypto/evp/p_enc.c
    openssl/crypto/evp/p_lib.c
    openssl/crypto/evp/p_open.c
    openssl/crypto/evp/p_seal.c
    openssl/crypto/evp/p_sign.c
    openssl/crypto/evp/p_verify.c
    openssl/crypto/evp/pbe_scrypt.c
    openssl/crypto/evp/pmeth_fn.c
    openssl/crypto/evp/pmeth_gn.c
    openssl/crypto/evp/pmeth_lib.c
    openssl/crypto/ex_data.c
    openssl/crypto/getenv.c
    openssl/crypto/hmac/hm_ameth.c
    openssl/crypto/hmac/hm_pmeth.c
    openssl/crypto/hmac/hmac.c
    openssl/crypto/init.c
    openssl/crypto/kdf/hkdf.c
    openssl/crypto/kdf/kdf_err.c
    openssl/crypto/kdf/scrypt.c
    openssl/crypto/kdf/tls1_prf.c
    openssl/crypto/lhash/lh_stats.c
    openssl/crypto/lhash/lhash.c
    openssl/crypto/md5/md5_dgst.c
    openssl/crypto/md5/md5_one.c
    openssl/crypto/mem.c
    openssl/crypto/mem_clr.c
    openssl/crypto/mem_dbg.c
    openssl/crypto/mem_sec.c
    openssl/crypto/modes/cbc128.c
    openssl/crypto/modes/ccm128.c
    openssl/crypto/modes/cfb128.c
    openssl/crypto/modes/ctr128.c
    openssl/crypto/modes/cts128.c
    openssl/crypto/modes/gcm128.c
    openssl/crypto/modes/ocb128.c
    openssl/crypto/modes/ofb128.c
    openssl/crypto/modes/wrap128.c
    openssl/crypto/modes/xts128.c
    openssl/crypto/o_dir.c
    openssl/crypto/o_fips.c
    openssl/crypto/o_fopen.c
    openssl/crypto/o_init.c
    openssl/crypto/o_str.c
    openssl/crypto/o_time.c
    openssl/crypto/objects/o_names.c
    openssl/crypto/objects/obj_dat.c
    openssl/crypto/objects/obj_err.c
    openssl/crypto/objects/obj_lib.c
    openssl/crypto/objects/obj_xref.c
    openssl/crypto/ocsp/ocsp_asn.c
    openssl/crypto/ocsp/ocsp_cl.c
    openssl/crypto/ocsp/ocsp_err.c
    openssl/crypto/ocsp/ocsp_ext.c
    openssl/crypto/ocsp/ocsp_ht.c
    openssl/crypto/ocsp/ocsp_lib.c
    openssl/crypto/ocsp/ocsp_prn.c
    openssl/crypto/ocsp/ocsp_srv.c
    openssl/crypto/ocsp/ocsp_vfy.c
    openssl/crypto/ocsp/v3_ocsp.c
    openssl/crypto/pem/pem_all.c
    openssl/crypto/pem/pem_err.c
    openssl/crypto/pem/pem_info.c
    openssl/crypto/pem/pem_lib.c
    openssl/crypto/pem/pem_oth.c
    openssl/crypto/pem/pem_pk8.c
    openssl/crypto/pem/pem_pkey.c
    openssl/crypto/pem/pem_sign.c
    openssl/crypto/pem/pem_x509.c
    openssl/crypto/pem/pem_xaux.c
    openssl/crypto/pem/pvkfmt.c
    openssl/crypto/pkcs12/p12_add.c
    openssl/crypto/pkcs12/p12_asn.c
    openssl/crypto/pkcs12/p12_attr.c
    openssl/crypto/pkcs12/p12_crpt.c
    openssl/crypto/pkcs12/p12_crt.c
    openssl/crypto/pkcs12/p12_decr.c
    openssl/crypto/pkcs12/p12_init.c
    openssl/crypto/pkcs12/p12_key.c
    openssl/crypto/pkcs12/p12_kiss.c
    openssl/crypto/pkcs12/p12_mutl.c
    openssl/crypto/pkcs12/p12_npas.c
    openssl/crypto/pkcs12/p12_p8d.c
    openssl/crypto/pkcs12/p12_p8e.c
    openssl/crypto/pkcs12/p12_sbag.c
    openssl/crypto/pkcs12/p12_utl.c
    openssl/crypto/pkcs12/pk12err.c
    openssl/crypto/pkcs7/bio_pk7.c
    openssl/crypto/pkcs7/pk7_asn1.c
    openssl/crypto/pkcs7/pk7_attr.c
    openssl/crypto/pkcs7/pk7_doit.c
    openssl/crypto/pkcs7/pk7_lib.c
    openssl/crypto/pkcs7/pk7_mime.c
    openssl/crypto/pkcs7/pk7_smime.c
    openssl/crypto/pkcs7/pkcs7err.c
    openssl/crypto/poly1305/poly1305.c
    openssl/crypto/poly1305/poly1305_ameth.c
    openssl/crypto/poly1305/poly1305_pmeth.c
    openssl/crypto/rand/drbg_ctr.c
    openssl/crypto/rand/drbg_lib.c
    openssl/crypto/rand/rand_egd.c
    openssl/crypto/rand/rand_err.c
    openssl/crypto/rand/rand_lib.c
    openssl/crypto/rand/rand_unix.c
    openssl/crypto/rand/rand_vms.c
    openssl/crypto/rand/rand_win.c
    openssl/crypto/rsa/rsa_ameth.c
    openssl/crypto/rsa/rsa_asn1.c
    openssl/crypto/rsa/rsa_chk.c
    openssl/crypto/rsa/rsa_crpt.c
    openssl/crypto/rsa/rsa_depr.c
    openssl/crypto/rsa/rsa_err.c
    openssl/crypto/rsa/rsa_gen.c
    openssl/crypto/rsa/rsa_lib.c
    openssl/crypto/rsa/rsa_meth.c
    openssl/crypto/rsa/rsa_mp.c
    openssl/crypto/rsa/rsa_none.c
    openssl/crypto/rsa/rsa_oaep.c
    openssl/crypto/rsa/rsa_ossl.c
    openssl/crypto/rsa/rsa_pk1.c
    openssl/crypto/rsa/rsa_pmeth.c
    openssl/crypto/rsa/rsa_prn.c
    openssl/crypto/rsa/rsa_pss.c
    openssl/crypto/rsa/rsa_saos.c
    openssl/crypto/rsa/rsa_sign.c
    openssl/crypto/rsa/rsa_ssl.c
    openssl/crypto/rsa/rsa_x931.c
    openssl/crypto/rsa/rsa_x931g.c
    openssl/crypto/sha/keccak1600.c
    openssl/crypto/sha/sha1_one.c
    openssl/crypto/sha/sha1dgst.c
    openssl/crypto/sha/sha256.c
    openssl/crypto/sha/sha512.c
    openssl/crypto/siphash/siphash.c
    openssl/crypto/siphash/siphash_ameth.c
    openssl/crypto/siphash/siphash_pmeth.c
    openssl/crypto/sm2/sm2_crypt.c
    openssl/crypto/sm2/sm2_err.c
    openssl/crypto/sm2/sm2_pmeth.c
    openssl/crypto/sm2/sm2_sign.c
    openssl/crypto/sm3/m_sm3.c
    openssl/crypto/sm3/sm3.c
    openssl/crypto/sm4/sm4.c
    openssl/crypto/stack/stack.c
    openssl/crypto/threads_none.c
    openssl/crypto/threads_pthread.c
    openssl/crypto/threads_win.c
    openssl/crypto/txt_db/txt_db.c
    openssl/crypto/ui/ui_err.c
    openssl/crypto/ui/ui_lib.c
    openssl/crypto/ui/ui_null.c
    openssl/crypto/ui/ui_openssl.c
    openssl/crypto/ui/ui_util.c
    openssl/crypto/uid.c
    openssl/crypto/x509/by_dir.c
    openssl/crypto/x509/by_file.c
    openssl/crypto/x509/t_crl.c
    openssl/crypto/x509/t_req.c
    openssl/crypto/x509/t_x509.c
    openssl/crypto/x509/x509_att.c
    openssl/crypto/x509/x509_cmp.c
    openssl/crypto/x509/x509_d2.c
    openssl/crypto/x509/x509_def.c
    openssl/crypto/x509/x509_err.c
    openssl/crypto/x509/x509_ext.c
    openssl/crypto/x509/x509_lu.c
    openssl/crypto/x509/x509_meth.c
    openssl/crypto/x509/x509_obj.c
    openssl/crypto/x509/x509_r2x.c
    openssl/crypto/x509/x509_req.c
    openssl/crypto/x509/x509_set.c
    openssl/crypto/x509/x509_trs.c
    openssl/crypto/x509/x509_txt.c
    openssl/crypto/x509/x509_v3.c
    openssl/crypto/x509/x509_vfy.c
    openssl/crypto/x509/x509_vpm.c
    openssl/crypto/x509/x509cset.c
    openssl/crypto/x509/x509name.c
    openssl/crypto/x509/x509rset.c
    openssl/crypto/x509/x509spki.c
    openssl/crypto/x509/x509type.c
    openssl/crypto/x509/x_all.c
    openssl/crypto/x509/x_attrib.c
    openssl/crypto/x509/x_crl.c
    openssl/crypto/x509/x_exten.c
    openssl/crypto/x509/x_name.c
    openssl/crypto/x509/x_pubkey.c
    openssl/crypto/x509/x_req.c
    openssl/crypto/x509/x_x509.c
    openssl/crypto/x509/x_x509a.c
    openssl/crypto/x509v3/pcy_cache.c
    openssl/crypto/x509v3/pcy_data.c
    openssl/crypto/x509v3/pcy_lib.c
    openssl/crypto/x509v3/pcy_map.c
    openssl/crypto/x509v3/pcy_node.c
    openssl/crypto/x509v3/pcy_tree.c
    openssl/crypto/x509v3/v3_addr.c
    openssl/crypto/x509v3/v3_admis.c
    openssl/crypto/x509v3/v3_akey.c
    openssl/crypto/x509v3/v3_akeya.c
    openssl/crypto/x509v3/v3_alt.c
    openssl/crypto/x509v3/v3_asid.c
    openssl/crypto/x509v3/v3_bcons.c
    openssl/crypto/x509v3/v3_bitst.c
    openssl/crypto/x509v3/v3_conf.c
    openssl/crypto/x509v3/v3_cpols.c
    openssl/crypto/x509v3/v3_crld.c
    openssl/crypto/x509v3/v3_enum.c
    openssl/crypto/x509v3/v3_extku.c
    openssl/crypto/x509v3/v3_genn.c
    openssl/crypto/x509v3/v3_ia5.c
    openssl/crypto/x509v3/v3_info.c
    openssl/crypto/x509v3/v3_int.c
    openssl/crypto/x509v3/v3_lib.c
    openssl/crypto/x509v3/v3_ncons.c
    openssl/crypto/x509v3/v3_pci.c
    openssl/crypto/x509v3/v3_pcia.c
    openssl/crypto/x509v3/v3_pcons.c
    openssl/crypto/x509v3/v3_pku.c
    openssl/crypto/x509v3/v3_pmaps.c
    openssl/crypto/x509v3/v3_prn.c
    openssl/crypto/x509v3/v3_purp.c
    openssl/crypto/x509v3/v3_skey.c
    openssl/crypto/x509v3/v3_sxnet.c
    openssl/crypto/x509v3/v3_tlsf.c
    openssl/crypto/x509v3/v3_utl.c
    openssl/crypto/x509v3/v3err.c
    ossl_store.c
    rand_pool.c
)

ADD_LIBRARY(openssllib STATIC ${src_openssllib})
